# TheCreators

./: BaseCode.h  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  Scene.h  SceneRenderer.cpp  SceneRenderer.h  StandardBehavior.h  main.cpp  stb_image.h
Scene/: Character.cpp  Character.h  Scene.cpp  Scene.h  ThreadController.cpp
Scene/Character/: Character.cpp  Character.h  CharacterController.cpp  CharacterController.h
Scene/Character/Camera/: Camera.cpp  Camera.h
Scene/Chunks/: ChunksBuilder.cpp  ChunksBuilder.h  ChunksController.cpp  ChunksController.h  ChunksRenderer.cpp  ChunksRenderer.h
Scene/PostProcessing/: BlurBuilder.cpp  BlurBuilder.h  BlurController.cpp  BlurController.h  BlurRenderer.cpp  BlurRenderer.h
Scene/SceneRenderer/: SceneRenderer.cpp  SceneRenderer.h
Scene/SceneRenderer/RendererSettings/: RendererSettings.cpp  RendererSettings.h
Scene/SceneRenderer/VulkanSharedData/: VulkanReference.cpp  VulkanReference.h  VulkanSharedData.cpp  VulkanSharedData.h
Scene/ThreadController/: ThreadController.h
Scene/UserInterface/: InterfaceBuilder.cpp  InterfaceBuilder.h  InterfaceController.cpp  InterfaceController.h  InterfaceRenderer.cpp  InterfaceRenderer.h
SceneRenderer/: Bloor.cpp  Blur.cpp  BlurRenderer.cpp  BlurRenderer.h  ChunkRenderer.cpp  ChunkRenderer.h  Chunks.cpp  Mesh.cpp  RendererSettings.cpp  RendererSettings.h  SceneRenderer.cpp  SceneRenderer.h  SceneRendererChunks.cpp  SceneRendererVulkanObjects.cpp  Settings.cpp  SubpassIndex.h  UserInterface.cpp  UserInterfaceRenderer.cpp  UserInterfaceRenderer.h  VulkanReference.cpp  VulkanReference.h  VulkanSharedDate.cpp  VulkanSharedDate.h
ScriptsManager/: ScriptsManager.cpp  ScriptsManager.h
Shaders/BloorHorizontal/: frag.spv  shader.frag
Shaders/BloorVertical/: frag.spv  shader.frag  shader.vert  vert.spv
Shaders/Blur/: frag.spv  shader.frag  shader.vert  vert.spv
Shaders/BlurCompression/: compileShaders.bat  frag.spv
Shaders/BlurDecompression/: vert.spv
Shaders/BlurHorizontal/: frag.spv  shader.frag  vert.spv
Shaders/BlurVertical/: frag.spv  shader.frag  shader.vert
Shaders/Chunk/: frag.spv  shader.frag  shader.vert  vert.spv
Shaders/UserInterface/: shader.frag
Vulkan/: Buffer.h  CustomVulkanTypes.hpp  Debug.cpp  Debug.h  Device.cpp  Device.h  InputControl.cpp  InputControl.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  SwapChain.cpp  SwapChain.h  UniqueHandle.h  VectorTypes.h  VulkanSharedHaders.h  Window.cpp  Window.h
Vulkan/Buffer/: Buffer.cpp  Buffer.h
Vulkan/Debug/: Debug.cpp  Debug.h
Vulkan/Device/: Device.cpp  Device.h
Vulkan/Input/: InputControl.cpp  InputControl.h
Vulkan/Instance/: Instance.cpp  Instance.h
Vulkan/Material/: Material.cpp  Material.h
Vulkan/Mesh/: Mesh.cpp  Mesh.h
Vulkan/Other/: CustomVulkanTypes.hpp  UniqueHandle.h  VulkanSharedHaders.h
Vulkan/Swapchain/: SwapChain.cpp  SwapChain.h
Vulkan/Window/: Window.cpp  Window.h
